fix: исправление логики смен через полночь и окончательный фикс CORS